tests/ui/masterror/fail/duplicate_attr.stderr
error: duplicate #[masterror(...)] attribute
 --> tests/ui/masterror/fail/duplicate_attr.rs:6:1
  |
6 | #[masterror(code = AppCode::Internal, category = AppErrorKind::Internal)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `AppCode` and `AppErrorKind`
 --> tests/ui/masterror/fail/duplicate_attr.rs:1:17
  |
1 | use masterror::{AppCode, AppErrorKind, Masterror};
  |                 ^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
